メモリ設定を調整 refs #10