@@ -16,7 +16,10 @@ find . -type f -regex ".*/build/test-results/googleplayDebug/.*xml" -exec cp {} 
 }
 
 # テスト実行
-./gradlew -PpreDexEnable=false -Pcom.android.build.threadPoolSize=1 -Dorg.gradle.parallel=false -Dorg.gradle.jvmargs="-Xms512m -Xmx512m" -Dorg.gradle.daemon=false :app:testGoogleplayDebugUnitTest
+./gradlew -Dorg.gradle.parallel=false  \
+          -Dorg.gradle.daemon=false \
+          -Dorg.gradle.jvmargs="-Xmx1024m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError" \
+          :app:testGoogleplayDebugUnitTest
 
 
 if [ $? -ne 0 ]; then
